--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "helmet": "^3.15.0",
-    "i": "^0.3.6"
+    "helmet": "^3.15.0"
   }
 }
